--- a/config.toml
+++ b/config.toml
@@ -239,7 +239,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "google-scholar"
     icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    link = "https://scholar.google.co.uk/citations?view_op=list_works&hl=en&user=QkDf1mkAAAAJ"
 
   [[params.social]]
     icon = "github"
@@ -256,7 +256,7 @@ enableGitInfo = false
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
   # [[params.social]]
   #   icon = "cv"
-  #   icon_pack = "ai"
+  #  icon_pack = "ai"
   #   link = "files/cv.pdf"
 
 # Navigation Links
