--- a/config.toml
+++ b/config.toml
@@ -323,8 +323,8 @@ enableGitInfo = false
 # Taxonomies.
 [taxonomies]
   tag = "tags"
-  category = "categories"
-  publication_type = "publication_types"
+  # category = "categories"
+  # publication_type = "publication_types"
 
 # Languages
 #   Create a [languages.X] block for each language you want, where X is the language ID.
