--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "https://sahasud1.github.io/"
 
 # Title of your site
-title = "Academic"
+title = "Sudipta Saha"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
