--- a/config.toml
+++ b/config.toml
@@ -65,7 +65,7 @@ enableGitInfo = false
 
   # Your details.
   name = "Sudipta Saha"
-  role = "PhD candidate of Biostatistics"
+  role = "PhD candidate in Biostatistics"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
