--- a/config.toml
+++ b/config.toml
@@ -283,10 +283,10 @@ enableGitInfo = false
 #  url = "#posts"
 #  weight = 3
 
-#[[menu.main]]
-#  name = "Projects"
-#  url = "#projects"
-#  weight = 4
+[[menu.main]]
+  name = "Statistical Consultant"
+  url = "#projects"
+  weight = 4
 
 [[menu.main]]
   name = "Teaching"
